Updated the garage section

--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -34,6 +34,9 @@ keywords: anagh sharma, design, development, designer
         <div class="row">
             <ul class="no-bullet">
               <li class="blog-list mv3 pv3 ph3">
+                <a href="{{ site.url }}/blog/macos-menu-bar-app-with-swiftui/" class="heading font-bold f4 lh-title" aria-label="Read the blog post - macOS menu bar app with SwiftUI">macOS menu bar app with SwiftUI</a>
+              </li>
+              <li class="blog-list mv3 pv3 ph3">
                 <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-bold f4 lh-title" aria-label="Read the blog post - Creating a hyperlink control for Xamarin Mac">Creating a custom hyperlink control for Xamarin.Mac</a>
               </li>
               <li class="blog-list mv3 pv3 ph3">
