--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@ keywords: design, portfolio, development, designer
           <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
         <ul class="no-bullet">
             <li class="blog-list mv3 pv2 ph3">
-                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-medium f5" aria-label="Read the blog post">Creating a custom hyperlink control for Xamarin.Mac</a>
+                <a href="{{ site.url }}/blog/macos-menu-bar-app-with-swiftui/" class="heading font-medium f5" aria-label="Read the blog post">macOS menu bar app with SwiftUI</a>
               </li>
           <li class="blog-list mv3 pv2 ph3">
-            <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-medium f5" aria-label="Read the blog post">Handling different UI states with a single ViewController</a>
+            <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-medium f5" aria-label="Read the blog post">Creating a custom hyperlink control for Xamarin.Mac</a>
           </li>
         </ul>
       </div>
