--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
-              <a href="{{ site.url }}/projects/personal-identity" class="heading" aria-label="Go to Personal Identity project study">
-                <div class="portfolio-project-card horizontal-rect-8 identity-thumbnail mb2">
+              <a href="{{ site.url }}/projects/timeless" class="heading" aria-label="Go to Timeless calendar project case study">
+                <div class="portfolio-project-card horizontal-rect-8 timeless-thumbnail mb2">
                 </div>
               </a>
             </div>
@@ -53,8 +53,8 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
           <div class="columns small-collapse">
-            <a href="{{ site.url }}/projects/uber" class="heading" aria-label="Go to Uber project case study">
-              <div class="portfolio-project-card horizontal-rect-12 uber-thumbnail mb2">
+            <a href="{{ site.url }}/projects/personal-identity" class="heading" aria-label="Go to Personal Identity project case study">
+              <div class="portfolio-project-card horizontal-rect-12 identity-thumbnail mb2">
               </div>
             </a>
           </div>
@@ -92,7 +92,7 @@ keywords: design, portfolio, development, designer
       <div style="width: 57px;" class="section-heading-bar-dark"></div>
     </div>
     <div class="row mt5 mb6">
-      <div class="large-9 middle-6 small-12 columns pr3">
+      <div class="large-12 middle-6 small-12 columns pr3">
         <hr class="font-secondary"/>
         {% for post in site.posts limit:1 %}
           <h6 class="f6 font-medium font-secondary mt4 mb1">LATEST ARTICLE / READ TIME - {{ post.read-time}}</h6>
@@ -103,8 +103,8 @@ keywords: design, portfolio, development, designer
           <a href="{{ site.url }}/blog" class="font-primary-color f6 font-medium ml2" style="vertical-align: center;" aria-label="See all blog posts">SEE ALL</a>
         </div>
         <div class="row">
-          {% for post in site.posts offset:1 limit:3 %}
-          <div class="large-4 medium-4 columns mt1">
+          {% for post in site.posts offset:1 limit:4 %}
+          <div class="large-3 medium-3 columns mt1">
             <a href="{{ post.url }}" class="primary no-decoration-light" aria-label="Read the blog post">  
               <div class="blog-card pt3">
                 <h5 class="f4 mh3 font-bold lh-title">{{ post.title }}</h5>
