--- a/_pages/store.html
+++ b/_pages/store.html
@@ -25,7 +25,7 @@ keywords: store, shop, download
             </div>
             <div class="large-4 medium-4 columns">
               <div class="carol-store-thumbnail store-product-container square mb2">
-                <a href="https://gumroad.com/l/jTGQEa" target="_blank" class="cta action-button font-bold" aria-label="Open to buy and download Carol from gumroad.com">DOWNLOAD NOW</a>
+                <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="cta action-button font-bold" aria-label="Open to download Carol from GitHub">DOWNLOAD NOW</a>
               </div>
             </div>
             <div class="large-4 medium-4 columns">
