Updated the XBOX project

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -40,6 +40,8 @@ keywords: design, xbox, iphone, mobile, app, console
             <div class="large-7 medium-7 end columns">
                 <h4 class="font-dark font-secondary-bold">Overview</h4>
                 <p class="text-justify font-dark lh-copy mt4">In 2016, I bought an XBOX One and wanted to keep track of my games and achievements using the iPhone app. I found it too confusing to use and did a conceptual redesign from ground up to tackle the foundational flaws.</p>
+                <h5 class="font-dark font-secondary-bold mt4">Update: Oct'20</h5>
+                <p class="text-justify font-dark lh-copy mt3">Microsoft has finally updated the official XBOX iOS app with a better information architecture (although they cut back the features drastically).</p>
                 <h4 class="font-dark font-secondary-bold mt5">Role</h4>
                 <p class="text-justify font-dark lh-copy mt4">Product Designer</p>
                 <h4 class="font-dark font-secondary-bold mt5">Problem</h4>
